k8s/event-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: registry.digitalocean.com/event-tickets-registry/event-service:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: event-service-service
spec:
  ports:
    - port: 80
      targetPort: 8083
  selector:
    app: event-service
  type: ClusterIP
