k8s/gateway-admin-organizer-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-admin-organizer-lb
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-size-slug: "lb-small"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8085
  selector:
    app: gateway-admin-organizer
