k8s/gateway-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
    spec:
      containers:
        - name: gateway-app
          image: registry.digitalocean.com/event-tickets-registry/gateway-app:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-app-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: gateway-app
  type: ClusterIP
