k8s/identity-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      containers:
        - name: identity-service
          image: registry.digitalocean.com/event-tickets-registry/identity-service:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service-service
spec:
  ports:
    - port: 80
      targetPort: 8081
  selector:
    app: identity-service
  type: ClusterIP
