k8s/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: registry.digitalocean.com/event-tickets-registry/notification-service:latest
          ports:
            - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service-service
spec:
  ports:
    - port: 80
      targetPort: 8087
  selector:
    app: notification-service
  type: ClusterIP
