k8s/payment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: registry.digitalocean.com/event-tickets-registry/payment-service:latest
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service-service
spec:
  ports:
    - port: 80
      targetPort: 8086
  selector:
    app: payment-service
  type: ClusterIP
