k8s/payment-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service-lb
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-size-slug: "lb-small"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8086  # Port mà payment-service đang chạy
  selector:
    app: payment-service
